fix: DH-19917: reduce contrast of light theme disabled color (#2506)
Changes light themes disabled text color to be an even lighter color.
Changed to show more difference between enabled and disabled states.

Color change didn't seem to trigger enough difference to change e2e
tests.

--- a/packages/components/scss/bootstrap_overrides.scss
+++ b/packages/components/scss/bootstrap_overrides.scss
@@ -253,7 +253,7 @@ $dropdown-divider-bg: $gray-700;
 //context menus
 $contextmenu-bg: var(--dh-color-popover-bg);
 $contextmenu-color: var(--dh-color-text);
-$contextmenu-disabled-color: var(--dh-color-input-disabled-fg);
+$contextmenu-disabled-color: var(--dh-color-text-disabled);
 $contextmenu-keyboard-selected-bg: var(--dh-color-keyboard-selected-bg);
 $contextmenu-selected-bg: var(--dh-color-item-list-hover-bg);
 $contextmenu-selected-color: var(--dh-color-item-list-selected-fg);
