--- a/packages/components/src/theme/theme-light/theme-light-semantic.css
+++ b/packages/components/src/theme/theme-light/theme-light-semantic.css
@@ -16,7 +16,7 @@
   /* Text */
   --dh-color-heading-text: var(--dh-color-gray-900);
   --dh-color-text: var(--dh-color-gray-800);
-  --dh-color-text-disabled: var(--dh-color-gray-700);
+  --dh-color-text-disabled: var(--dh-color-gray-500);
   --dh-color-text-highlight: color-mix(
     in srgb,
     var(--dh-color-blue-700) 15%,
